feat(prophecies/armies): Add delete route
